--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,3 +4,9 @@
     margin-top: -40px;
     margin-bottom: 10px;
 }
+
+@media screen and (max-width : 480px) {
+    .hidden-msg {
+        font-size: 0.5em;
+    }
+}
